# brunhild

./: .gitignore  Cargo.toml  LICENSE  README.md  externs.js
src/: attrs.rs  events.rs  externs.js  externs.rs  ffi.rs  lib.rs  mutations.rs  node.rs  tokenizer.rs  tree.rs  util.rs  utils.rs
src/patching/: attrs.rs  classes.rs  mod.rs  node.rs  patching.rs  tokenizer.rs  util.rs
