[package]
name = "brunhild"
version = "0.2.0"
authors = ["bakape <bakape@gmail.com>"]
edition = "2018"
description  = "experimental compressive Rust virtual DOM library"
repository = "https://github.com/bakape/brunhild.git"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.22"
wasm-bindgen = "0.2.44"


[dependencies.web-sys]
version = "0.3.22"
features = [
  'Document',
  'Window',
  'HtmlElement',
  'Element',
  'Node',
]

[dev-dependencies]
wasm-bindgen-test = "0.2.44"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1.6"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false
