[package]
name = "brunhild"
version = "0.5.3"
authors = ["bakape <bakape@gmail.com>"]
edition = "2018"
description  = "experimental compressive Rust virtual DOM library"
repository = "https://github.com/bakape/brunhild.git"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.31"
wasm-bindgen = "0.2.54"

[dependencies.web-sys]
version = "0.3.31"
features = [
  'Document',
  'Window',
  'HtmlElement',
  'Element',
  'Node',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.4"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false
